[gd_scene load_steps=11 format=3 uid="uid://ct26s6get85j6"]

[ext_resource type="Script" uid="uid://681e8wl1vk3d" path="res://RoundCountDown/Laser/container_animation.gd" id="1_eboa6"]
[ext_resource type="Texture2D" uid="uid://c6llkk5myf22b" path="res://RoundCountDown/Laser/CountDownLaserDeco1.svg" id="2_vn8b4"]
[ext_resource type="Texture2D" uid="uid://drlhrnu0c7t8d" path="res://RoundCountDown/Laser/CountDownLaserDeco2.svg" id="3_6royd"]
[ext_resource type="Texture2D" uid="uid://cn1mmpnpo3ty2" path="res://RoundCountDown/Laser/CountDownLaserDeco3.svg" id="4_lfwd3"]
[ext_resource type="Texture2D" uid="uid://ckcvvx7hdqvtr" path="res://MapModComponents/Laser/LaserWarningParticleSpriteVertical.svg" id="5_xa0ba"]

[sub_resource type="Curve" id="Curve_xoi6q"]
_data = [Vector2(0.00402145, 1), 0.0, 0.0, 0, 0, Vector2(0.746649, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_7kc02"]
colors = PackedColorArray(0.980392, 0.976471, 0.403922, 1, 0.956863, 0.227451, 0.227451, 1)

[sub_resource type="Animation" id="Animation_ob4tl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftGun1/LeftGun2/LeftGun3:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.261799]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftGun1/LeftGun2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.523598]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftGun1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.261799]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterGun1/CenterGun2/CenterGun3:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.785397]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CenterGun1/CenterGun2:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.523598]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CenterGun1:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.0472]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RightGun1:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.785397]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RightGun1/RightGun2:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.0472]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("RightGun1/RightGun2/RightGun3:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.523598]
}

[sub_resource type="Animation" id="Animation_npdvt"]
resource_name = "default"
length = 7.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftGun1:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 5.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.785397, -0.261799, 0.523598]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftGun1/LeftGun2:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.43333, 3.33333, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.0472, -0.523598, 0.0, -1.0472]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftGun1/LeftGun2/LeftGun3:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 4.46667, 6.03333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.523598, -0.261799, 1.57079, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterGun1:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3.36667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.0472, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CenterGun1/CenterGun2:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.6, 4.1, 5.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.523598, -1.309, -0.523598, -1.57079]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CenterGun1/CenterGun2/CenterGun3:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.96667, 3.6, 5.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.785397, 0.785397, -0.785397]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RightGun1:rotation")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.8, 2.86667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.069953, 0.785397, 1.57079]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RightGun1/RightGun2:rotation")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 2, 4.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.523598, -1.0472, -0.261799]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("RightGun1/RightGun2/RightGun3:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2.56667, 4.23333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.309, 0.523598, -0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xoi6q"]
_data = {
&"RESET": SubResource("Animation_ob4tl"),
&"default": SubResource("Animation_npdvt")
}

[node name="ContainerAnimations" type="Node2D"]
script = ExtResource("1_eboa6")

[node name="LeftGun1" type="Sprite2D" parent="."]
position = Vector2(-294, -64)
rotation = -0.261799
texture = ExtResource("2_vn8b4")
offset = Vector2(-41, -31)

[node name="LeftGun2" type="Sprite2D" parent="LeftGun1"]
position = Vector2(-67, -53)
rotation = -0.523598
texture = ExtResource("3_6royd")
offset = Vector2(39, -35)

[node name="LeftGun3" type="Sprite2D" parent="LeftGun1/LeftGun2"]
position = Vector2(70, -56)
rotation = -0.261799
texture = ExtResource("4_lfwd3")
offset = Vector2(53, -17)

[node name="CPUParticles2D" type="CPUParticles2D" parent="LeftGun1/LeftGun2/LeftGun3"]
z_index = 10
position = Vector2(145.134, -28.6362)
emitting = false
amount = 28
texture = ExtResource("5_xa0ba")
lifetime = 2.07
one_shot = true
speed_scale = 2.2
explosiveness = 0.57
emission_shape = 3
emission_rect_extents = Vector2(15.33, 9.95)
particle_flag_align_y = true
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 396.23
initial_velocity_max = 396.23
scale_amount_min = 0.3
scale_amount_max = 0.3
scale_amount_curve = SubResource("Curve_xoi6q")
color_initial_ramp = SubResource("Gradient_7kc02")

[node name="CenterGun1" type="Sprite2D" parent="."]
position = Vector2(112, -82)
rotation = -1.0472
scale = Vector2(-0.715, 0.715)
texture = ExtResource("2_vn8b4")
offset = Vector2(-41, -31)

[node name="CenterGun2" type="Sprite2D" parent="CenterGun1"]
position = Vector2(-67, -53)
rotation = -0.523598
texture = ExtResource("3_6royd")
offset = Vector2(39, -35)

[node name="CenterGun3" type="Sprite2D" parent="CenterGun1/CenterGun2"]
position = Vector2(70, -56)
rotation = 0.785397
texture = ExtResource("4_lfwd3")
offset = Vector2(53, -17)

[node name="CPUParticles2D" type="CPUParticles2D" parent="CenterGun1/CenterGun2/CenterGun3"]
z_index = 10
position = Vector2(145.134, -28.6362)
emitting = false
amount = 28
texture = ExtResource("5_xa0ba")
lifetime = 2.07
one_shot = true
speed_scale = 2.2
explosiveness = 0.57
emission_shape = 3
emission_rect_extents = Vector2(15.33, 9.95)
particle_flag_align_y = true
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 396.23
initial_velocity_max = 396.23
scale_amount_min = 0.3
scale_amount_max = 0.3
scale_amount_curve = SubResource("Curve_xoi6q")
color_initial_ramp = SubResource("Gradient_7kc02")

[node name="RightGun1" type="Sprite2D" parent="."]
position = Vector2(299, -47)
rotation = 0.785397
scale = Vector2(1.215, 1.215)
texture = ExtResource("2_vn8b4")
offset = Vector2(-41, -31)

[node name="RightGun2" type="Sprite2D" parent="RightGun1"]
position = Vector2(-67, -53)
rotation = -1.0472
texture = ExtResource("3_6royd")
offset = Vector2(39, -35)

[node name="RightGun3" type="Sprite2D" parent="RightGun1/RightGun2"]
position = Vector2(70, -56)
rotation = 0.523598
texture = ExtResource("4_lfwd3")
offset = Vector2(53, -17)

[node name="CPUParticles2D" type="CPUParticles2D" parent="RightGun1/RightGun2/RightGun3"]
z_index = 10
position = Vector2(145.134, -28.6362)
emitting = false
amount = 28
texture = ExtResource("5_xa0ba")
lifetime = 2.07
one_shot = true
speed_scale = 2.2
explosiveness = 0.57
emission_shape = 3
emission_rect_extents = Vector2(15.33, 9.95)
particle_flag_align_y = true
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 396.23
initial_velocity_max = 396.23
scale_amount_min = 0.3
scale_amount_max = 0.3
scale_amount_curve = SubResource("Curve_xoi6q")
color_initial_ramp = SubResource("Gradient_7kc02")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xoi6q")
}
autoplay = "default"

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
autostart = true
